--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,3 +28,15 @@
 		<script src="js/init.js"></script>
 	
 	<body>
+		
+	<!-- Header -->
+		<div id="header" class="skel-layers-fixed">
+
+			<div class="top">
+
+				<!-- Logo -->
+					<div id="logo">
+						<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+						<h1 id="title">Jane Doe</h1>
+						<p>Hyperspace Engineer</p>
+					</div>
