--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,6 @@
 				<!-- Logo -->
 					<div id="logo">
 						<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-						<h1 id="title">Jane Doe</h1>
-						<p>Hyperspace Engineer</p>
+						<h1 id="title">{{ site.name }}</h1>
+						<p>Jekyll CMS</p>
 					</div>
