--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,9 @@
 {% include head.html %}
-
+{% include header.html %}
+{% include main.html %}
+{% include portfolio.html %}
+{% include aboutme.html %}
+{% include contacts.html %}
 
     {{ content }}
     
