--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 {% include main.html %}
 {% include portfolio.html %}
 {% include aboutme.html %}
-{% include contacts.html %}
+{% include contact.html %}
 
     {{ content }}
     
