--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,22 +9,22 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="{{ site.baseurl }}/css/ie/html5shiv.js"></script><![endif]-->
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/style-wide.css" />
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-wide.css" />
 
-		<!--[if lte IE 9]><link rel="stylesheet" href="{{ site.baseurl }}/css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.baseurl }}/css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	
 	<!-- Scripts -->
-		<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.scrolly.min.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.scrollzer.min.js"></script>
-		<script src="{{ site.baseurl }}/js/skel.min.js"></script>
-		<script src="{{ site.baseurl }}/js/skel-layers.min.js"></script>
-		<script src="{{ site.baseurl }}/js/init.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.scrolly.min.js"></script>
+		<script src="js/jquery.scrollzer.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
 	
 	<body>
