--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 		<!-- Logo -->
 			<div id="logo">
 				<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-				<h1 id="title">{{ site.name }}</h1>
+				<h1 id="title">Testing</h1>
 				<p>CMS by Loralee Starla Gentry</p>
 			</div>
 
