--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
 		<!-- Logo -->
 			<div id="logo">
 				<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-				<h1 id="title">{{site.name}}</h1>
-				<p>CMS by Loralee Starla Gentry</p>
+				<h1 id="title">Jane Doe</h1>
+				<p>Hyperspace Engineer</p>
 			</div>
 
 		<!-- Nav -->
