--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,20 +1,7 @@
-		<!-- Main -->
-			<div id="main">
+	<!-- Main -->
+		<div id="main">
 
-				<!-- Intro -->
-					<section id="top" class="one dark cover">
-						<div class="container">
-
-							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
-							</header>
-							
-							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
-							</footer>
-
-						</div>
-					</section>
+		{% capture intro %}
+			{% include_relative _posts/2015-01-01-intro.md %}
+		{% endcapture %} 
+			{{ intro | markdownify }}	
