--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,10 @@
 {% include head.html %}
 {% include header.html %}
 
-    {{ content }}
+    <!--These should be posts I think, rather than HTML, but i cannot figure it out godamnit!-->
+        {% include info.html %}
+        {% include portfolio.html %}
+        {% include aboutme.html %}
+
 {% include contact.html %}    
 {% include footer.html %}
