--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 {% include header.html %}
 
     <!--These should be posts I think, rather than HTML, but i cannot figure it out godamnit!-->
-        {% include info.html %}
+        {% include intro.html %}
         {% include portfolio.html %}
         {% include aboutme.html %}
 
