--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
 		<!-- Logo -->
 			<div id="logo">
 				<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-				<h1 id="title">Jane Doe</h1>
-				<p>Hyperspace Engineer</p>
+			<h1 id="title">Site Title</h1> 	<!--should be {{site.name}} but that isnt working! grr!!-->
+				<p>CMS Template</p>
 			</div>
 
 		<!-- Nav -->
